--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,4 +1,4 @@
-<a id="logo" href="/wiki">
+<a id="logo" href="/">
 
     <svg version="1.0" id="Ebene_1" xmlns="http://www.w3.org/2000/svg"  x="0px" y="0px"
 	 width="149.361px" height="46.025px" viewBox="0 0 149.361 46.025" enable-background="new 0 0 149.361 46.025"
